WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221128
Recover MediaStreamTrack audio rendering from GPUProcess crash
https://bugs.webkit.org/show_bug.cgi?id=221128
Summary
Recover MediaStreamTrack audio rendering from GPUProcess crash
youenn fablet
Reported
2021-01-29 04:53:31 PST
Recover MediaStreamTrack audio rendering from GPUProcess crash
Attachments
Patch
(10.76 KB, patch)
2021-01-29 04:59 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(10.85 KB, patch)
2021-02-02 02:14 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-01-29 04:59:04 PST
Created
attachment 418718
[details]
Patch
youenn fablet
Comment 2
2021-01-29 08:47:51 PST
Comment on
attachment 418718
[details]
Patch WK1 failure is unrelated
Radar WebKit Bug Importer
Comment 3
2021-02-01 11:28:49 PST
<
rdar://problem/73838195
>
Peng Liu
Comment 4
2021-02-01 15:33:13 PST
Comment on
attachment 418718
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418718&action=review
> Source/WebCore/platform/mediastream/AudioMediaStreamTrackRenderer.h:108 > +
Nit. An extra empty line.
> Source/WebCore/platform/mediastream/AudioTrackPrivateMediaStream.cpp:172 > +void AudioTrackPrivateMediaStream::createNewRenderer()
Nit. Seems a callback. Maybe we can name it "newRendererCreated"?
youenn fablet
Comment 5
2021-02-02 02:14:18 PST
(In reply to Peng Liu from
comment #4
)
> Comment on
attachment 418718
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=418718&action=review
> > > Source/WebCore/platform/mediastream/AudioMediaStreamTrackRenderer.h:108 > > + > > Nit. An extra empty line.
Will fix.
> > Source/WebCore/platform/mediastream/AudioTrackPrivateMediaStream.cpp:172 > > +void AudioTrackPrivateMediaStream::createNewRenderer() > > Nit. Seems a callback. Maybe we can name it "newRendererCreated"?
Not really, it is actually creating a new renderer, even though this is triggered by a callback telling current renderer is crashing.
youenn fablet
Comment 6
2021-02-02 02:14:40 PST
Created
attachment 418977
[details]
Patch
EWS
Comment 7
2021-02-02 09:21:27 PST
Committed
r272213
: <
https://trac.webkit.org/changeset/272213
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418977
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug