Source/WebCore/platform/mediastream/AudioTrackPrivateMediaStream.h
@@ -36,7 +36,7 @@ class AudioMediaStreamTrackRenderer;
 
 class AudioTrackPrivateMediaStream final
     : public AudioTrackPrivate
-    , private MediaStreamTrackPrivate::Observer
+    , public MediaStreamTrackPrivate::Observer
     , private RealtimeMediaSource::AudioSampleObserver {
     WTF_MAKE_NONCOPYABLE(AudioTrackPrivateMediaStream)
 public:
@@ -69,8 +69,10 @@ public:
     const char* logClassName() const final { return "AudioTrackPrivateMediaStream"; }
 #endif
 
-protected:
+private:
     explicit AudioTrackPrivateMediaStream(MediaStreamTrackPrivate&);
+
+    static std::unique_ptr<AudioMediaStreamTrackRenderer> createRenderer(AudioTrackPrivateMediaStream&);
 
     // AudioTrackPrivate
     Kind kind() const final { return Kind::Main; }
@@ -91,6 +93,7 @@ protected:
     void startRenderer();
     void stopRenderer();
     void updateRenderer();
+    void createNewRenderer();
 
     // Main thread writable members
     bool m_isPlaying { false };
